--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "concurrently": "^7.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "sass": "^1.50.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "scss": "sass src/main.scss src/main.css --watch --style compressed --no-source-map",
+    "dev": "concurrently \"npm start \"  \" npm run scss \"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
