--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "concurrently": "^7.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-helmet-async": "^1.3.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "sass": "^1.50.0",
