--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-helmet-async": "^1.3.0",
+    "react-icons": "^4.3.1",
+    "react-lazy-load-image-component": "^1.5.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "sass": "^1.50.0",
